--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -52,6 +52,14 @@
 					"id": -1,
 					"name": "笔记列表",
 					"pathName": "pages/noteList/noteList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 2,
+					"name": "个人中心",
+					"pathName": "pages/mine/mine",
+					"query": "",
 					"scene": null
 				}
 			]
