--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -60,6 +60,19 @@
 					"name": "个人中心",
 					"pathName": "pages/mine/mine",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "关于",
+					"pathName": "pages/mine/about/about",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "公告",
+					"pathName": "pages/mine/notice/notice",
 					"scene": null
 				}
 			]
