--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/noteList/noteList",
     "pages/mine/mine",
     "pages/mine/about/about",
-    "pages/mine/notice/notice"
+    "pages/mine/notice/notice",
+    "pages/noteList/filter/filter"
   ],
   "window": {
     "backgroundTextStyle": "light",
