--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -73,6 +73,13 @@
 					"id": -1,
 					"name": "公告",
 					"pathName": "pages/mine/notice/notice",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "筛选",
+					"pathName": "pages/noteList/filter/filter",
 					"scene": null
 				}
 			]
